--- a/s3_bucket_creation_cft.yaml
+++ b/s3_bucket_creation_cft.yaml
@@ -6,7 +6,7 @@ Resources:
     Type: AWS::S3::Bucket
     Description: Creating Amazon S3 bucket from CloudFormation
     Properties:
-      BucketName: iiii-named-this-bucket
+      BucketName: suresh-named-this-bucket
 Outputs:
   S3Bucket:
     Description: Bucket Created using this template.
